[package]
name = "cs_mwc_wallet_util"
version = "4.4.0"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Util, for generic utilities and to re-export grin crates"
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.6"
serde = "1"
serde_derive = "1"
ed25519-dalek = "1.0.0-pre.4"
data-encoding = "2"
sha3 = "0.8"
failure = "0.1"
failure_derive = "0.1"

# For Release
#grin_core = { git = "https://github.com/mwcproject/mwc-node", tag = "4.4.3" }
#grin_keychain = { git = "https://github.com/mwcproject/mwc-node", tag = "4.4.3" }
#grin_chain = { git = "https://github.com/mwcproject/mwc-node", tag = "4.4.3" }
#grin_util = { git = "https://github.com/mwcproject/mwc-node", tag = "4.4.3" }
#grin_api = { git = "https://github.com/mwcproject/mwc-node", tag = "4.4.3" }
#grin_store = { git = "https://github.com/mwcproject/mwc-node", tag = "4.4.3" }
#grin_p2p = { git = "https://github.com/mwcproject/mwc-node", tag = "4.4.3" }

# For bleeding edge - use grin_* names to match lib.rs re-exports
grin_core = { package = "cs_mwc_core", version = "5.3.9", git = "https://github.com/cypherstack/mwc-node", branch = "mirror" }
grin_keychain = { package = "cs_mwc_keychain", version = "5.3.9", git = "https://github.com/cypherstack/mwc-node", branch = "mirror" }
grin_chain = { package = "cs_mwc_chain", version = "5.3.9", git = "https://github.com/cypherstack/mwc-node", branch = "mirror" }
grin_util = { package = "cs_mwc_util", version = "5.3.9", git = "https://github.com/cypherstack/mwc-node", branch = "mirror" }
grin_api = { package = "cs_mwc_api", version = "5.3.9", git = "https://github.com/cypherstack/mwc-node", branch = "mirror" }
grin_store = { package = "cs_mwc_store", version = "5.3.9", git = "https://github.com/cypherstack/mwc-node", branch = "mirror" }
grin_p2p = { package = "cs_mwc_p2p", version = "5.3.9", git = "https://github.com/cypherstack/mwc-node", branch = "mirror" }


# For local testing
#grin_core = { path = "../../mwc-node/core"}
#grin_keychain = { path = "../../mwc-node/keychain"}
#grin_chain = { path = "../../mwc-node/chain"}
#grin_util = { path = "../../mwc-node/util"}
#grin_api = { path = "../../mwc-node/api"}
#grin_store = { path = "../../mwc-node/store"}
#grin_p2p = { path = "../../mwc-node/p2p"}

[dev-dependencies]
pretty_assertions = "0.5.1"
